// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dataset review queue > the draft beside its spans, and a rejection with reasons 1`] = `
<div>
  <div
    class="grid gap-5 xl:grid-cols-[260px_minmax(0,1fr)_minmax(0,1fr)]"
  >
    <nav
      aria-label="검토 대기 목록"
      class="space-y-2 xl:sticky xl:top-20 xl:max-h-[calc(100dvh-7rem)] xl:self-start xl:overflow-y-auto"
    >
      <button
        aria-current="true"
        class="w-full rounded-lg px-3 py-2.5 text-left outline-none focus-visible:ring-3 focus-visible:ring-ring/50 bg-accent hover:bg-accent"
        type="button"
      >
        <span
          class="block text-base font-semibold"
        >
          사업 금액은 얼마인가요?
        </span>
        <span
          class="mt-1 flex items-center gap-2 text-xs text-muted-foreground"
        >
          <span
            class="font-mono"
          >
            dev-amount-r1
          </span>
          ·
          <span>
            fact
          </span>
        </span>
      </button>
      <button
        class="w-full rounded-lg px-3 py-2.5 text-left outline-none hover:bg-secondary/70 focus-visible:ring-3 focus-visible:ring-ring/50"
        type="button"
      >
        <span
          class="block text-base font-semibold"
        >
          마감일은?
        </span>
        <span
          class="mt-1 flex items-center gap-2 text-xs text-muted-foreground"
        >
          <span
            class="font-mono"
          >
            dev-date-r1
          </span>
          ·
          <span>
            fact
          </span>
        </span>
      </button>
    </nav>
    <div
      class="min-w-0 space-y-6"
    >
      <div
        class="space-y-5"
      >
        <div
          class="space-y-2"
        >
          <span
            class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-neutral-bg text-neutral"
          >
            <span
              aria-hidden="true"
              class="size-1.5 rounded-full bg-neutral"
            />
            fact
          </span>
          <p
            class="text-lg font-bold leading-snug"
          >
            사업 금액은 얼마인가요?
          </p>
          <div
            class="space-y-2 rounded-xl border border-input bg-secondary/40 p-4"
          >
            <h3
              class="text-sm font-semibold"
            >
              초안 답변
            </h3>
            <p
              class="text-base"
            >
              1억 3천만원
            </p>
          </div>
          <p
            class="text-sm text-muted-foreground"
          >
            난이도 이유:␠
            표 안의 값
          </p>
        </div>
        <p
          class="rounded-xl px-4 py-3 text-sm font-medium bg-bad-bg text-bad"
          role="alert"
        >
          현재 원문 상태와 맞지 않습니다:␠
          g1: 원문이 바뀜
        </p>
        <dl
          class="grid grid-cols-[7rem_1fr] gap-x-3 gap-y-1.5 text-sm"
        >
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              유형
            </dt>
            <dd>
              fact
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              데이터셋
            </dt>
            <dd>
              dev
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              초안 작성
            </dt>
            <dd>
              agent-a
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              초안 생성 요청
            </dt>
            <dd>
              person-a
␠␠␠␠␠␠␠␠␠␠␠␠␠␠␠
              <span
                class="text-warn"
              >
                (승인할 수 없음)
              </span>
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              답변 가능성
            </dt>
            <dd>
              답변 가능
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              기대 상태
            </dt>
            <dd>
              답변
            </dd>
          </div>
          <div
            class="contents"
          >
            <dt
              class="text-muted-foreground"
            >
              기준일
            </dt>
            <dd>
              2024-05-01
            </dd>
          </div>
        </dl>
        <section
          class="space-y-4"
        >
          <div
            class="flex flex-wrap items-baseline justify-between gap-3"
          >
            <h3
              class="text-lg font-bold"
            >
              필수 주장
            </h3>
            <span
              class="text-xs text-muted-foreground"
            >
              답변이 반드시 맞혀야 하는 값과 단서
            </span>
          </div>
          <div
            class="overflow-x-auto rounded-xl border border-input bg-background"
          >
            <table
              class="w-full border-collapse"
            >
              <caption
                class="sr-only"
              >
                필수 주장
              </caption>
              <thead
                class="bg-secondary/70"
              >
                <tr>
                  <th
                    class="px-3 py-3 text-left text-sm font-semibold text-foreground"
                    scope="col"
                  >
                    값
                  </th>
                  <th
                    class="px-3 py-3 text-left text-sm font-semibold text-foreground"
                    scope="col"
                  >
                    단서
                  </th>
                  <th
                    class="px-3 py-3 text-left text-sm font-semibold text-foreground"
                    scope="col"
                  >
                    중요도
                  </th>
                </tr>
              </thead>
              <tbody
                class="divide-y divide-input"
              >
                <tr>
                  <td
                    class="px-3 py-3 align-top text-sm font-semibold"
                  >
                    130000000 원
                  </td>
                  <td
                    class="px-3 py-3 align-top text-sm"
                  >
                    부가세|VAT / 포함
                  </td>
                  <td
                    class="px-3 py-3 align-top text-sm"
                  >
                    <span
                      class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-warn-bg text-warn"
                    >
                      <span
                        aria-hidden="true"
                        class="size-1.5 rounded-full bg-warn"
                      />
                      금액
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </section>
        <ul
          class="space-y-2"
        >
          <li
            class="space-y-1.5 rounded-xl border p-3"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="rounded bg-foreground px-1.5 text-xs font-bold text-background"
              >
                문서␠
                1
              </span>
              <span
                class="text-sm font-semibold"
              >
                통합 정보시스템 구축
              </span>
              <span
                class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
              >
                <span
                  aria-hidden="true"
                  class="size-1.5 rounded-full bg-ok"
                />
                자동 대조 통과
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              a.pdf
               ·␠
              PDF
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              근거␠
              g1
               · PDF 파일␠
              12, 13
              쪽 (파일 페이지 기준)
            </p>
            <a
              class="group/button inline-flex shrink-0 items-center justify-center border bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[13px] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5"
              data-size="sm"
              data-slot="button"
              data-variant="outline"
              href="/api/originals/doc-aaaaaaaa/hash-a"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-download"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15V3"
                />
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <path
                  d="m7 10 5 5 5-5"
                />
              </svg>
              원문 파일 받기
            </a>
          </li>
          <li
            class="space-y-1.5 rounded-xl border p-3"
          >
            <p
              class="text-sm text-bad"
            >
              문서를 찾을 수 없습니다.
            </p>
          </li>
        </ul>
        <section
          class="space-y-4"
        >
          <div
            class="flex flex-wrap items-baseline justify-between gap-3"
          >
            <h3
              class="text-lg font-bold"
            >
              부재 검증 기록
            </h3>
          </div>
          <dl
            class="grid grid-cols-[7rem_1fr] gap-x-3 gap-y-1 text-sm"
          >
            <div
              class="contents"
            >
              <dt
                class="text-muted-foreground"
              >
                searched
              </dt>
              <dd>
                전체
              </dd>
            </div>
            <div
              class="contents"
            >
              <dt
                class="text-muted-foreground"
              >
                terms
              </dt>
              <dd>
                ["금액"]
              </dd>
            </div>
          </dl>
        </section>
        <section
          class="space-y-4"
        >
          <div
            class="flex flex-wrap items-baseline justify-between gap-3"
          >
            <h3
              class="text-lg font-bold"
            >
              CSV 메타데이터
            </h3>
          </div>
          <dl
            class="grid grid-cols-[9rem_1fr] gap-x-3 gap-y-1 text-sm"
          >
            <div
              class="contents"
            >
              <dt
                class="text-muted-foreground"
              >
                amount_krw
              </dt>
              <dd
                class="break-all"
              >
                130000000
              </dd>
            </div>
          </dl>
        </section>
      </div>
      <form
        class="space-y-4 rounded-2xl border-2 border-foreground/10 bg-secondary/40 p-4"
      >
        <h3
          class="text-lg font-bold"
        >
          결정
        </h3>
        <p
          class="rounded-xl px-4 py-3 text-sm font-medium bg-warn-bg text-warn"
        >
          person-a
           님이 이 초안의 생성을 요청했습니다. 승인은 다른 검토자가 해야 합니다. 거절은 할 수 있습니다.
        </p>
        <div
          class="space-y-1.5"
        >
          <label
            class="text-[13px] font-semibold"
            for="decide-dev-amount-r1-note"
          >
            메모 (필수: 확인한 원문 위치, 또는 무엇이 틀렸는지)
          </label>
          <textarea
            class="w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:opacity-60 py-2"
            id="decide-dev-amount-r1-note"
            required=""
            rows="3"
          />
        </div>
        <div
          class="space-y-1.5 text-sm"
        >
          <label
            class="flex items-start gap-2"
          >
            <input
              class="mt-0.5 size-4 accent-primary"
              type="checkbox"
            />
            원문 파일에서 질문·값·단위·조건·근거를 직접 확인했습니다
          </label>
          <label
            class="flex items-start gap-2"
          >
            <input
              class="mt-0.5 size-4 accent-primary"
              type="checkbox"
            />
            쟁점 있음: 마감·금액·기관·필수 조건을 다른 사람이 한 번 더 확인해야 합니다
          </label>
        </div>
        <fieldset
          class="space-y-1.5"
        >
          <legend
            class="text-[13px] font-semibold"
          >
            거절 사유 (거절할 때)
          </legend>
          <div
            class="flex flex-wrap gap-1.5"
          >
            <button
              aria-pressed="false"
              class="rounded-full border px-2.5 py-1 text-[13px] outline-none focus-visible:ring-3 focus-visible:ring-ring/50 bg-background hover:bg-secondary"
              type="button"
            >
              너무 쉬움
            </button>
            <button
              aria-pressed="false"
              class="rounded-full border px-2.5 py-1 text-[13px] outline-none focus-visible:ring-3 focus-visible:ring-ring/50 bg-background hover:bg-secondary"
              type="button"
            >
              값 틀림
            </button>
          </div>
        </fieldset>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            class="group/button inline-flex items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 h-10 flex-1"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            disabled=""
          >
            승인 → 데이터셋
          </button>
          <button
            class="group/button inline-flex items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:ring-3 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-destructive/10 text-destructive hover:bg-destructive/20 focus-visible:border-destructive/40 focus-visible:ring-destructive/20 dark:bg-destructive/20 dark:hover:bg-destructive/30 dark:focus-visible:ring-destructive/40 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 h-10 flex-1"
            data-size="lg"
            data-slot="button"
            data-variant="destructive"
          >
            거절 → 거절 위키
          </button>
        </div>
      </form>
    </div>
    <div
      class="min-w-0"
    >
      <section
        aria-label="원문 구절"
        class="space-y-3"
      >
        <div
          class="flex flex-wrap items-baseline justify-between gap-2"
        >
          <h3
            class="text-lg font-bold"
          >
            원문 구절␠
            2
            개
          </h3>
          <span
            class="text-xs text-muted-foreground"
          >
            노란 바탕이 초안이 인용한 부분
          </span>
        </div>
        <article
          class="space-y-4 rounded-xl border border-input bg-background p-4"
        >
          <div
            class="flex flex-wrap items-center gap-2"
          >
            <span
              class="text-sm font-semibold"
            >
              g1 · 근거 1
            </span>
            <span
              class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
            >
              <span
                aria-hidden="true"
                class="size-1.5 rounded-full bg-ok"
              />
              인용 위치 확인
            </span>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            PDF 12쪽
          </p>
          <p
            class="text-base whitespace-pre-wrap"
          >
            <span>
              사업 금액은␠
            </span>
            <mark
              class="rounded bg-cite-bg px-0.5 font-semibold text-foreground [box-decoration-break:clone]"
            >
              1억 3천만원
            </mark>
          </p>
        </article>
        <article
          class="space-y-4 rounded-xl border border-input bg-background p-4"
        >
          <div
            class="flex flex-wrap items-center gap-2"
          >
            <span
              class="text-sm font-semibold"
            >
              g1 · 근거 2
            </span>
            <span
              class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-bad-bg text-bad"
            >
              <span
                aria-hidden="true"
                class="size-1.5 rounded-full bg-bad"
              />
              인용 구절을 찾지 못함
            </span>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            위치 없음
          </p>
          <p
            class="text-sm text-bad"
          >
            원문 요소를 찾을 수 없습니다.
          </p>
          <p
            class="text-base"
          >
            <span
              class="mr-2 text-xs font-semibold text-muted-foreground"
            >
              초안 인용
            </span>
            없는 인용
          </p>
        </article>
      </section>
    </div>
  </div>
</div>
`;

exports[`document search > the filters it sends 1`] = `
<form
  aria-label="문서 찾기"
  class="space-y-3 border-b p-5"
  role="search"
>
  <h2
    class="text-lg font-bold"
  >
    문서 찾기
  </h2>
  <div
    class="relative"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search pointer-events-none absolute top-1/2 left-3 size-4 -translate-y-1/2 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <label
      class="sr-only"
      for="q"
    >
      검색어
    </label>
    <input
      class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 pl-9"
      id="q"
      placeholder="사업명, 내용, 요구사항 코드"
      value="하자"
    />
  </div>
  <div>
    <label
      class="mb-1 block text-[13px] font-medium text-muted-foreground"
      for="inst"
    >
      발주 기관
    </label>
    <input
      class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
      id="inst"
      placeholder="예: 한국교육학술정보원"
      value="교육"
    />
  </div>
  <div
    data-slot="collapsible"
    data-state="open"
  >
    <button
      aria-controls="radix-_r_1_"
      aria-expanded="true"
      class="group flex min-h-6 items-center gap-1 rounded text-[13px] font-semibold text-muted-foreground outline-none hover:text-foreground focus-visible:ring-3 focus-visible:ring-ring/50"
      data-slot="collapsible-trigger"
      data-state="open"
      type="button"
    >
      상세 조건␠
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-3.5 transition-transform group-data-[state=open]:rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="grid grid-cols-2 gap-2 pt-2"
      data-slot="collapsible-content"
      data-state="open"
      id="radix-_r_1_"
      style=""
    >
      <div>
        <label
          class="mb-1 block text-[13px] text-muted-foreground"
          for="amin"
        >
          최소 금액(원)
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
          id="amin"
          inputmode="numeric"
          value="1000"
        />
      </div>
      <div>
        <label
          class="mb-1 block text-[13px] text-muted-foreground"
          for="amax"
        >
          최대 금액(원)
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
          id="amax"
          inputmode="numeric"
          value=""
        />
      </div>
      <div>
        <label
          class="mb-1 block text-[13px] text-muted-foreground"
          for="cfrom"
        >
          마감 시작
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
          id="cfrom"
          type="date"
          value=""
        />
      </div>
      <div>
        <label
          class="mb-1 block text-[13px] text-muted-foreground"
          for="cto"
        >
          마감 끝
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
          id="cto"
          type="date"
          value="2024-12-31"
        />
      </div>
    </div>
  </div>
  <button
    class="h-10 w-full rounded-lg bg-foreground text-[15px] font-semibold text-background outline-none hover:bg-foreground/85 focus-visible:ring-3 focus-visible:ring-ring/50"
    type="submit"
  >
    검색
  </button>
</form>
`;

exports[`document search > the results, a full selection and the next page 1`] = `
<div>
  <div
    class="flex h-full flex-col"
  >
    <form
      aria-label="문서 찾기"
      class="space-y-3 border-b p-5"
      role="search"
    >
      <h2
        class="text-lg font-bold"
      >
        문서 찾기
      </h2>
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search pointer-events-none absolute top-1/2 left-3 size-4 -translate-y-1/2 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <label
          class="sr-only"
          for="q"
        >
          검색어
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 pl-9"
          id="q"
          placeholder="사업명, 내용, 요구사항 코드"
          value=""
        />
      </div>
      <div>
        <label
          class="mb-1 block text-[13px] font-medium text-muted-foreground"
          for="inst"
        >
          발주 기관
        </label>
        <input
          class="h-10 w-full rounded-lg border border-input bg-background px-3 text-base sm:text-sm outline-none placeholder:text-muted-foreground/80 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50"
          id="inst"
          placeholder="예: 한국교육학술정보원"
          value=""
        />
      </div>
      <div
        data-slot="collapsible"
        data-state="closed"
      >
        <button
          aria-expanded="false"
          class="group flex min-h-6 items-center gap-1 rounded text-[13px] font-semibold text-muted-foreground outline-none hover:text-foreground focus-visible:ring-3 focus-visible:ring-ring/50"
          data-slot="collapsible-trigger"
          data-state="closed"
          type="button"
        >
          상세 조건␠
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-3.5 transition-transform group-data-[state=open]:rotate-180"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          class="grid grid-cols-2 gap-2 pt-2"
          data-slot="collapsible-content"
          data-state="closed"
          hidden=""
          id="radix-_r_0_"
          style=""
        />
      </div>
      <button
        class="h-10 w-full rounded-lg bg-foreground text-[15px] font-semibold text-background outline-none hover:bg-foreground/85 focus-visible:ring-3 focus-visible:ring-ring/50"
        type="submit"
      >
        검색
      </button>
    </form>
    <div
      aria-live="polite"
      class="flex-1 overflow-y-auto p-3"
    >
      <p
        class="px-2 pb-2 text-[13px] text-muted-foreground"
      >
        14
        건 · 질문할 수 있는 문서가 먼저 나옵니다 · 최대 2개 선택
      </p>
      <ul
        class="space-y-1.5"
      >
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-primary bg-accent/60"
          >
            <button
              aria-checked="true"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-slot="checkbox"
              data-state="checked"
              id="pick-doc-aaaaaaaa"
              role="checkbox"
              type="button"
              value="on"
            >
              <span
                class="grid place-content-center text-current transition-none [&>svg]:size-3.5"
                data-slot="checkbox-indicator"
                data-state="checked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </button>
            <label
              class="min-w-0 flex-1 space-y-1.5 cursor-pointer"
              for="pick-doc-aaaaaaaa"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                통합 정보시스템 구축
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                한국교육학술정보원
                 ·␠
                1억 3,000만원
                 · 마감␠
                2024-03-20 10:00
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-neutral-bg text-neutral"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-neutral"
                  />
                  자동 대조 통과
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-primary bg-accent/60"
          >
            <button
              aria-checked="true"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-slot="checkbox"
              data-state="checked"
              id="pick-doc-bbbbbbbb"
              role="checkbox"
              type="button"
              value="on"
            >
              <span
                class="grid place-content-center text-current transition-none [&>svg]:size-3.5"
                data-slot="checkbox-indicator"
                data-state="checked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </button>
            <label
              class="min-w-0 flex-1 space-y-1.5 cursor-pointer"
              for="pick-doc-bbbbbbbb"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 0
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-neutral-bg text-neutral"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-neutral"
                  />
                  색인 전
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-1"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-1"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                제목 없음
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-warn-bg text-warn"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-warn"
                  />
                  자동 대조: 확인 필요
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-2"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-2"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 2
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-warn-bg text-warn"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-warn"
                  />
                  기록 충돌:␠
                  사업 금액
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-3"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-3"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                제목 없음
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-bad-bg text-bad"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-bad"
                  />
                  원문 수집 실패
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-4"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-4"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 4
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-warn-bg text-warn"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-warn"
                  />
                  사업 금액
                   조건 판단 불가(
                  충돌
                  )
                </span>
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-warn-bg text-warn"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-warn"
                  />
                  입찰 마감
                   조건 판단 불가(
                  값 없음
                  )
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-5"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-5"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                제목 없음
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-6"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-6"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 6
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-neutral-bg text-neutral"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-neutral"
                  />
                  색인 전
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-7"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-7"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                제목 없음
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-8"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-8"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 8
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-9"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-9"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                제목 없음
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-neutral-bg text-neutral"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-neutral"
                  />
                  색인 전
                </span>
              </div>
            </label>
          </div>
        </li>
        <li>
          <div
            class="flex gap-3 rounded-xl border p-3 transition-colors border-input hover:bg-secondary/70"
          >
            <button
              aria-checked="false"
              class="peer relative flex size-4 shrink-0 items-center justify-center rounded-[4px] border border-input transition-colors outline-none group-has-disabled/field:opacity-50 group-has-[:focus-visible]/field-label:ring-0 group-has-[:focus-visible]/field-label:not-data-checked:border-input after:absolute after:-inset-x-3 after:-inset-y-2 focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 aria-invalid:aria-checked:border-primary dark:bg-input/30 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 data-checked:border-primary data-checked:bg-primary data-checked:text-primary-foreground group-has-[:focus-visible]/field-label:data-checked:border-primary dark:data-checked:bg-primary mt-0.5"
              data-disabled=""
              data-slot="checkbox"
              data-state="unchecked"
              disabled=""
              id="pick-doc-10"
              role="checkbox"
              type="button"
              value="on"
            />
            <label
              class="min-w-0 flex-1 space-y-1.5"
              for="pick-doc-10"
            >
              <span
                class="block text-base font-semibold text-foreground"
              >
                문서 10
              </span>
              <span
                class="block text-[13px] text-muted-foreground"
              >
                기관 미상
                 ·␠
                금액 미상
                 · 마감␠
                미상
              </span>
              <div
                class="flex flex-wrap gap-1"
              >
                <span
                  class="inline-flex items-center gap-1.5 rounded-full font-semibold whitespace-nowrap px-2 py-0.5 text-xs bg-ok-bg text-ok"
                >
                  <span
                    aria-hidden="true"
                    class="size-1.5 rounded-full bg-ok"
                  />
                  질문 가능
                </span>
              </div>
            </label>
          </div>
        </li>
      </ul>
      <button
        class="mt-2 h-10 w-full rounded-lg text-sm font-semibold text-muted-foreground outline-none hover:bg-secondary focus-visible:ring-3 focus-visible:ring-ring/50"
        type="button"
      >
        더 보기 (
        2
        건 남음)
      </button>
    </div>
  </div>
</div>
`;

exports[`settings > the page as it opens 1`] = `
<div>
  <main
    class="mx-auto w-full max-w-2xl space-y-6 px-6 py-10"
  >
    <h1
      class="text-2xl font-semibold"
    >
      설정
    </h1>
    <section
      aria-labelledby="api-key-heading"
      class="space-y-4 rounded-xl border p-6"
    >
      <h2
        class="text-lg font-semibold"
        id="api-key-heading"
      >
        내 OpenAI API 키와 답변 모델
      </h2>
      <p
        class="text-sm"
      >
        내 계정에 설정됨 ·␠
        gpt-5-mini
         ·␠
        person-a
         · 2026-10-07 09:00
      </p>
      <form
        class="space-y-4"
      >
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="api-key"
          >
            새 키로 교체 (모델만 바꿀 때는 비워 두세요)
          </label>
          <input
            autocomplete="off"
            class="h-8 w-full min-w-0 rounded-lg border border-input bg-transparent px-2.5 py-1 text-base transition-colors outline-none file:inline-flex file:h-6 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:cursor-not-allowed disabled:bg-input/50 disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 md:text-sm dark:bg-input/30 dark:disabled:bg-input/80 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40"
            data-slot="input"
            id="api-key"
            placeholder="sk-…"
            spellcheck="false"
            type="password"
            value=""
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="api-model"
          >
            답변 모델
          </label>
          <select
            class="h-10 w-full rounded-lg border border-input bg-background px-3 text-sm outline-none focus-visible:ring-3 focus-visible:ring-ring/50"
            id="api-model"
          >
            <option
              value="gpt-6-luna"
            >
              gpt-6-luna
               — 기본 모델
            </option>
            <option
              value="gpt-5-mini"
            >
              gpt-5-mini
               — 팀 공용 키로 쓸 수 있음
            </option>
            <option
              value="o9"
            >
              o9
            </option>
          </select>
          <p
            class="text-sm text-muted-foreground"
          >
            키가 쓸 수 있는 모델이어야 합니다. 저장할 때 OpenAI에 무료로 확인합니다. 데이터셋 만들기와 평가는 이 선택과 관계없이 기본 모델(gpt-6-luna)을 씁니다.
          </p>
        </div>
        <p
          class="text-sm text-muted-foreground"
        >
          키는 로그인한 내 계정에만 쓰입니다. 같은 계정으로 다른 브라우저에서 로그인해도 쓰이고, 다른 팀원 계정에는 보이지도 쓰이지도 않습니다. 서버 프로세스 메모리에만 있고 파일, 데이터베이스, 로그 어디에도 저장되지 않으며 화면에 다시 표시되지 않습니다. 서버가 다시 시작되면 다시 입력해야 합니다. 사용 금액은 모두 아래의 공유 한도에 함께 기록됩니다.
        </p>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
          data-size="default"
          data-slot="button"
          data-variant="default"
          disabled=""
          type="submit"
        >
          모델 변경
        </button>
        <p
          aria-live="polite"
          role="status"
        />
      </form>
    </section>
    <section
      aria-labelledby="budget-heading"
      class="space-y-4 rounded-xl border p-6"
    >
      <h2
        class="text-lg font-semibold"
        id="budget-heading"
      >
        API 사용 한도
      </h2>
      <p
        class="text-sm text-muted-foreground"
      >
        이 서버를 사용하는 팀 전체에 적용되는 누적 달러 한도입니다. API 제공자의 계정 한도는 별도로 적용됩니다.
      </p>
      <p
        class="text-sm"
      >
        현재 한도␠
        $5.000000
         · 사용␠
        $1.234567
         · 예약␠
        $0.000010
      </p>
      <form
        class="space-y-4"
      >
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="budget-limit"
          >
            새 한도 (USD)
          </label>
          <input
            class="h-8 w-full min-w-0 rounded-lg border border-input bg-transparent px-2.5 py-1 text-base transition-colors outline-none file:inline-flex file:h-6 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:cursor-not-allowed disabled:bg-input/50 disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 md:text-sm dark:bg-input/30 dark:disabled:bg-input/80 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40"
            data-slot="input"
            id="budget-limit"
            inputmode="decimal"
            placeholder="10.00"
            required=""
            value=""
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
            data-slot="label"
            for="budget-reason"
          >
            변경 사유
          </label>
          <input
            class="h-8 w-full min-w-0 rounded-lg border border-input bg-transparent px-2.5 py-1 text-base transition-colors outline-none file:inline-flex file:h-6 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:cursor-not-allowed disabled:bg-input/50 disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 md:text-sm dark:bg-input/30 dark:disabled:bg-input/80 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40"
            data-slot="input"
            id="budget-reason"
            maxlength="500"
            required=""
            value=""
          />
        </div>
        <p
          class="text-sm text-muted-foreground"
        >
          기존 사용량과 미확정 예약보다 낮게 설정할 수 없습니다. 용도별 예산은 현재 비율로 조정되며 변경자와 사유가 기록됩니다.
        </p>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
          data-size="default"
          data-slot="button"
          data-variant="default"
          disabled=""
          type="submit"
        >
          한도 저장
        </button>
        <p
          aria-live="polite"
          role="status"
        />
      </form>
    </section>
  </main>
</div>
`;
